Update home page to be minimal

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
-<h1>Welcome</h1>
+<section class="slab slab--hero">
+  <div class="grid">
+    <h1>CfA Rails AWS Starter</h1>
 
-<div class="grid">
-  <div class="grid__item width-one-half shift-one-fourth">
-    <h1>Atoms</h1>
-    <p class="text--help">Atoms are the basic building blocks of matter. Applied to web interfaces, atoms are our HTML tags, such as a form label, an input or a button.</p>
-    <p class="text--help">Atoms can also include more abstract elements like color palettes, fonts and even more invisible aspects of an interface like animations.</p>
-    <p class="text--help">Like atoms in nature they’re fairly abstract and often not terribly useful on their own. However, they’re good as a reference in the context of a pattern library as you can see all your global styles laid out at a glance.</p>
+    <div class="grid__item width-one-half">
+      <p>Welcome to the CfA Rails AWS Starter Application!</p>
+    </div>
   </div>
-</div>
+</section>
